# django_cowsay

./: .gitignore  pyproject.toml
cowsave/: apps.py  forms.py  models.py  urls.py  views.py
cowsave/migrations/: 0001_initial.py
cowsave/templates/: history.html  index.html
cowsay/: settings.py  urls.py
